WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
174780
[WPE] libepoxy headers can use EGL_CAST, which might not be defined by eglplatform.h
https://bugs.webkit.org/show_bug.cgi?id=174780
Summary
[WPE] libepoxy headers can use EGL_CAST, which might not be defined by eglpla...
Zan Dobersek
Reported
2017-07-24 03:08:11 PDT
[WPE] libepoxy headers can use EGL_CAST, which might not be defined by eglplatform.h
Attachments
WIP
(14.13 KB, patch)
2017-07-24 03:08 PDT
,
Zan Dobersek
no flags
Details
Formatted Diff
Diff
Patch
(16.39 KB, patch)
2017-07-24 03:54 PDT
,
Zan Dobersek
no flags
Details
Formatted Diff
Diff
Patch
(16.49 KB, patch)
2017-07-24 03:55 PDT
,
Zan Dobersek
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Zan Dobersek
Comment 1
2017-07-24 03:08:34 PDT
Created
attachment 316278
[details]
WIP
Zan Dobersek
Comment 2
2017-07-24 03:54:33 PDT
Created
attachment 316280
[details]
Patch
Zan Dobersek
Comment 3
2017-07-24 03:55:40 PDT
Created
attachment 316281
[details]
Patch
Zan Dobersek
Comment 4
2017-07-24 07:24:41 PDT
Comment on
attachment 316281
[details]
Patch Clearing flags on attachment: 316281 Committed
r219819
: <
http://trac.webkit.org/changeset/219819
>
Zan Dobersek
Comment 5
2017-07-24 07:24:45 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug