Source/WebCore/platform/graphics/PlatformDisplay.cpp
@@ -60,7 +60,7 @@
 
 #if USE(EGL)
 #if USE(LIBEPOXY)
-#include <epoxy/egl.h>
+#include "EpoxyEGL.h"
 #else
 #include <EGL/egl.h>
 #endif
