Source/WebCore/platform/graphics/cairo/CairoUtilities.cpp
@@ -44,7 +44,7 @@
 
 #if ENABLE(ACCELERATED_2D_CANVAS)
 #if USE(EGL) && USE(LIBEPOXY)
-#include <epoxy/egl.h>
+#include "EpoxyEGL.h"
 #endif
 #include <cairo-gl.h>
 #endif
