Source/WebCore/platform/graphics/egl/GLContextEGL.cpp
@@ -25,7 +25,7 @@
 #include "PlatformDisplay.h"
 
 #if USE(LIBEPOXY)
-#include <epoxy/egl.h>
+#include "EpoxyEGL.h"
 #else
 #include <EGL/egl.h>
 #endif
