Source/WebCore/platform/graphics/opengl/Extensions3DOpenGLES.cpp
@@ -35,7 +35,7 @@
 #include "NotImplemented.h"
 
 #if USE(LIBEPOXY)
-#include <epoxy/egl.h>
+#include "EpoxyEGL.h"
 #else
 #include <EGL/egl.h>
 #endif
